--- a/roles/kvm_snapshot_base/templates/ks-base-fedora27-x86_64.cfg.j2
+++ b/roles/kvm_snapshot_base/templates/ks-base-fedora27-x86_64.cfg.j2
@@ -40,8 +40,7 @@ logvol / --vgname vg1 --size 8000 --grow --name=root --fstype=xfs
 shutdown
 
 %packages
-@core
-chrony
+@^server-product-environment
 
 %end
 
